Waiting for text content and PDR

--- a/index.html
+++ b/index.html
@@ -58,28 +58,30 @@
         </section>
         <footer class="footer">
             <div>
+                <h4>Contact us:</h4>
                 <form>
-                    <label for="feedback-form">Contact us:</label>
-                    <input type="email">
+                    <label for="email">Email:</label>
+                    <input name="email"type="email">
+                    <textarea name='feedback' id='feedback' value='feedback' placeholder='If you have any questions, comments or feedback let us know!' cols='50' rows='10'></textarea>
                     <br>
-                    <input type="text" placeholder="If you have any questions, comments or feedback let us know!">
+                    <input type="submit">
                 </form>
             </div>
             <div>
                 <h3>Video Resources:</h3>
-                <a href="https://youtu.be/CrZCBaV5fxg">Satellite Design</a>
-                <br>
-                <a href="https://youtu.be/jVzbs81bDy0">What if every satellite suddenly disappeared? Ted - Ed</a>
-                <br>
-                <a href="https://www.youtube.com/watch?v=0rHUDWjR5gg&list=PL8dPuuaLjXtPAJr1ysd5yGIyiSFuh0mIL">Crash Course Astronomy</a>
+                <ul>
+                    <li><a href="https://youtu.be/CrZCBaV5fxg">Satellite Design</a></li>
+                    <li><a href="https://youtu.be/jVzbs81bDy0">What if every satellite suddenly disappeared? Ted - Ed</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=0rHUDWjR5gg&list=PL8dPuuaLjXtPAJr1ysd5yGIyiSFuh0mIL">Crash Course Astronomy</a></li>
+                </ul>
             </div>
             <div>
                 <h3>Academic Resources:</h3>
-                <a href="https://www.nasa.gov/sites/default/files/atoms/files/nasa_csli_cubesat_101_508.pdf">CubeSats 101</a>
-                <br>
-                <a href="https://www.sciencedirect.com/topics/engineering/downlink-and-uplink-transmission">Satellite to Ground Station Communication</a>
-                <br>
-                <a href="https://www.sciencedirect.com/book/9780080977478/orbital-mechanics-for-engineering-students">Orbital Mechanics and Mission Planning</a>
+                <ul>
+                    <li><a href="https://www.nasa.gov/sites/default/files/atoms/files/nasa_csli_cubesat_101_508.pdf">CubeSats 101</a></li>
+                    <li><a href="https://www.sciencedirect.com/topics/engineering/downlink-and-uplink-transmission">Satellite to Ground Station Communication</a></li>
+                    <li><a href="https://www.sciencedirect.com/book/9780080977478/orbital-mechanics-for-engineering-students">Orbital Mechanics and Mission Planning</a></li>
+                </ul>
             </div>
         </footer>
     </body>
