OOPs didnt save

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Educational Satellite Website">
     </head>
-    <body> <!-- check alt texts -->
+    <body> <!-- check alt texts, will it work from browser -->
         <header>
             <h1 id="main-title">History of Telecommunications</h1>
             <nav>
