Problem with directory trouble shooting

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang='en-GB' >
     <head>
         <title>History of Telecommunications</title>
+        <link rel="stylesheet" href="index.css">
         <meta charset="'UTF-8">
         <meta name="keywords" content="Satellite, CubeSat, Space, Telecommunications">
         <meta name="author" content="Jack Crane">
@@ -62,6 +63,7 @@
                 <form>
                     <label for="email">Email:</label>
                     <input name="email"type="email">
+                    <br>
                     <textarea name='feedback' id='feedback' value='feedback' placeholder='If you have any questions, comments or feedback let us know!' cols='50' rows='10'></textarea>
                     <br>
                     <input type="submit">
