--- a/index.html
+++ b/index.html
@@ -29,31 +29,29 @@
         </nav>
         <header>
             <h1>Satellites 101</h1>
-            <div> <!-- enable auto scroll with css -->
-                <div id="slide-one">
-                    <p class="numbering">1/4</p>
-                    <p class="caption">Caption 1</p>
-                    <button class="backbutton slide-show-button" onclick="document.getElementById('slide-one').style.display = 'none', document.getElementById('slide-four').style.display = 'block'"></button>>&lt;</button>
-                    <button class="forwardbutton slide-show-button" onclick="document.getElementById('slide-one').style.display = 'none', document.getElementById('slide-two').style.display = 'block'">&gt;</button>
+            <div id="slideshow">
+                <div class="slide-wrapper">
+                    <div class="slide" id="s-one">
+                        <h1 class="slide-number">
+                            GeeksforGeeks
+                        </h1>
+                    </div>
+                    <div class="slide" id="s-two">
+                        <h1 class="slide-number">
+                            A computer science portal
+                        </h1>
+                    </div>
+                    <div class="slide" id="s-three">
+                        <h1 class="slide-number">
+                            This is an example of
+                        </h1>
+                    </div>
+                    <div class="slide" id="s-four">
+                        <h1 class="slide-number">
+                            Slideshow with HTML and CSS only
+                        </h1>
+                    </div>
                 </div>
-                <div id="slide-two">
-                    <p class="numbering">2/4</p>
-                    <p class="caption">Caption 2</p>
-                    <button class="backbutton slide-show-button" onclick="document.getElementById('slide-two').style.display = 'none', document.getElementById('slide-one').style.display = 'block'"></button>>&lt;</button>
-                    <button class="forwardbutton slide-show-button" onclick="document.getElementById('slide-two').style.display = 'none', document.getElementById('slide-three').style.display = 'block'">&gt;</button>
-                </div> 
-                <div id="slide-three">
-                    <p class="numbering">3/4</p>
-                    <p class="caption">Caption 3</p>
-                    <button class="backbutton slide-show-button" onclick="document.getElementById('slide-three').style.display = 'none', document.getElementById('slide-two').style.display = 'block'"></button>>&lt;</button>
-                    <button class="forwardbutton slide-show-button" onclick="document.getElementById('slide-three').style.display = 'none', document.getElementById('slide-four').style.display = 'block'">&gt;</button>
-                </div> 
-                <div id="slide-four">
-                    <p class="numbering">4/4</p>
-                    <p class="caption">Caption 4</p>
-                    <button class="backbutton slide-show-button" onclick="document.getElementById('slide-four').style.display = 'none', document.getElementById('slide-three').style.display = 'block'"></button>>&lt;</button>
-                    <button class="forwardbutton slide-show-button" onclick="document.getElementById('slide-four').style.display = 'none', document.getElementById('slide-one').style.display = 'block'">&gt;</button>
-                </div>  
             </div>    
         </header>
         <section>
