--- a/index.html
+++ b/index.html
@@ -9,55 +9,45 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Educational Satellite Website">
     </head>
-    <body> <!-- check alt texts, will it work from browser -->
+    <body> <!-- check alt texts, will it work from browser --> 
         <nav>
-            <ul id ='unhidden'>
-                <li id="logo_li">
-                    <div id="logo" class="nav-child"></div>
-                </li>
-                <li id="button_li">
-                    <ul>
-                        <li class="mainli"><button><a href="index.html">Home</a></button></li>
-                        <li class="mainli"><button><a href="history.html">History</a></button></li>
-                        <li class="mainli"><button><a href="disaster.html">Disaster</a></button></li>
-                        <li class="mainli"><button><a href="cubesat.html">CubeSats</a></button></li>
-                        <li class="mainli" id="closeli" onclick="document.getElementById('unhidden').style.display = 'none', document.getElementById('hidden').style.display = 'block' "><button id="close-nav-bar">&lt;</button></li>
-                    </ul>
-                </li>
-            </ul>
-            <button id="hidden" onclick="document.getElementById('unhidden').style.display = 'block', document.getElementById('hidden').style.display = 'none'">&gt;</button>
-        </nav>
-        <header>
+            <div><img src='/pictures/logo.PNG' alt="website logo"></div>
             <h1>Satellites 101</h1>
+            <ul>
+                <li class="mainli"><button><a href="index.html">Home</a></button></li>
+                <li class="mainli"><button><a href="history.html">History</a></button></li>
+                <li class="mainli"><button><a href="disaster.html">Disaster</a></button></li>
+                <li class="mainli"><button><a href="cubesat.html">CubeSats</a></button></li>
+            </ul>
+        </nav> 
+        <div id="spacer"></div>
+        <section>
+            
             <div id="slideshow">
                 <div class="slide-wrapper">
                     <div class="slide" id="s-one">
-                        <h1 class="slide-number">
-                            GeeksforGeeks
-                        </h1>
+                        <p class="slide-number">1/4</p>
                     </div>
                     <div class="slide" id="s-two">
-                        <h1 class="slide-number">
-                            A computer science portal
-                        </h1>
+                        <p class="slide-number">2/4</p>
                     </div>
                     <div class="slide" id="s-three">
-                        <h1 class="slide-number">
-                            This is an example of
-                        </h1>
+                        <p class="slide-number">3/4</p>
                     </div>
                     <div class="slide" id="s-four">
-                        <h1 class="slide-number">
-                            Slideshow with HTML and CSS only
-                        </h1>
+                        <p class="slide-number">4/4</p>
                     </div>
                 </div>
             </div>    
-        </header>
-        <section>
-            <div>
-                <img id="body-img-1" src="https://media.istockphoto.com/id/537228978/photo/landscape-with-milky-way-silhouette-of-a-father-and-son.jpg?s=612x612&w=0&k=20&c=leGjKS51LqES_wjn5pC19B-pr6xQ0fQ7gg4RHitfZco=" alt="Astronomy">
-                <img id="body-img-2" src="https://miro.medium.com/max/1200/1*ijb1xIwHWcLB6537G49XPQ.jpeg" alt="No Money">
+        </section>
+        <article>
+            <div id="article-img">
+                <div>
+                    <img id="body-img-1" src="https://media.istockphoto.com/id/537228978/photo/landscape-with-milky-way-silhouette-of-a-father-and-son.jpg?s=612x612&w=0&k=20&c=leGjKS51LqES_wjn5pC19B-pr6xQ0fQ7gg4RHitfZco=" alt="Astronomy">
+                </div>
+                <div>
+                    <img id="body-img-2" src="https://miro.medium.com/max/1200/1*ijb1xIwHWcLB6537G49XPQ.jpeg" alt="No Money">
+                </div>            
             </div>
             <div>
                 <h2>What do Satellites do?</h2>
@@ -67,8 +57,8 @@
                 <span><a href="disaster">Disaster</a></span>
                 <span><a href="cubesat">Cubesat</a></span>
             </div>
-        </section>
-        <footer class="footer">
+        </article>ow to change inline
+        <footer>
             <div>
                 <h4>Contact us:</h4>
                 <form>
@@ -81,20 +71,22 @@
                 </form>
             </div>
             <div>
-                <h3>Video Resources:</h3>
-                <ul>
-                    <li><a href="https://youtu.be/CrZCBaV5fxg">Satellite Design</a></li>
-                    <li><a href="https://youtu.be/jVzbs81bDy0">What if every satellite suddenly disappeared? Ted - Ed</a></li>
-                    <li><a href="https://www.youtube.com/watch?v=0rHUDWjR5gg&list=PL8dPuuaLjXtPAJr1ysd5yGIyiSFuh0mIL">Crash Course Astronomy</a></li>
-                </ul>
-            </div>
-            <div>
-                <h3>Academic Resources:</h3>
-                <ul>
-                    <li><a href="https://www.nasa.gov/sites/default/files/atoms/files/nasa_csli_cubesat_101_508.pdf">CubeSats 101</a></li>
-                    <li><a href="https://www.sciencedirect.com/topics/engineering/downlink-and-uplink-transmission">Satellite to Ground Station Communication</a></li>
-                    <li><a href="https://www.sciencedirect.com/book/9780080977478/orbital-mechanics-for-engineering-students">Orbital Mechanics and Mission Planning</a></li>
-                </ul>
+                <div>
+                    <h3>Video Resources:</h3>
+                    <ul>
+                        <li><a href="https://youtu.be/CrZCBaV5fxg">Satellite Design</a></li>
+                        <li><a href="https://youtu.be/jVzbs81bDy0">What if every satellite suddenly disappeared? Ted - Ed</a></li>
+                        <li><a href="https://www.youtube.com/watch?v=0rHUDWjR5gg&list=PL8dPuuaLjXtPAJr1ysd5yGIyiSFuh0mIL">Crash Course Astronomy</a></li>
+                    </ul>
+                </div>
+                <div>
+                    <h3>Academic Resources:</h3>
+                    <ul>
+                        <li><a href="https://www.nasa.gov/sites/default/files/atoms/files/nasa_csli_cubesat_101_508.pdf">CubeSats 101</a></li>
+                        <li><a href="https://www.sciencedirect.com/topics/engineering/downlink-and-uplink-transmission">Satellite to Ground Station Communication</a></li>
+                        <li><a href="https://www.sciencedirect.com/book/9780080977478/orbital-mechanics-for-engineering-students">Orbital Mechanics and Mission Planning</a></li>
+                    </ul>
+                </div>
             </div>
         </footer>
     </body>
